--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
-  "engines": { 
-    "node": "16.x" 
+  "engines": {
+    "node": "16.x"
   },
   "scripts": {
     "build": "nuxt build",
@@ -13,6 +13,9 @@
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.1.3",
-    "nuxt": "3.0.0"
+    "nuxt": "^3.10.3"
+  },
+  "dependencies": {
+    "nuxt-seo-kit": "^1.3.13"
   }
 }
